[package]
name = "rej"
version = "0.7.0"
edition = "2021"
description = "Minimalistic database"
license = "MIT"

[[bench]]
name = "main"
harness = false

[dev-dependencies]
env_logger = { version = "0.11.5" }
tempdir = { version = "0.3.7" }
rand = { version = "0.8.5" }
criterion = { version = "0.5.1" }

[dependencies]
libc = { version = "0.2.167" }
fs4 = { version = "0.12.0" }
memmap2 = { version = "0.9.5" }
thiserror = { version = "2.0" }
crc64 = { version = "2.0.0" }
log = { version = "0.4.22" }
memoffset = { version = "0.9.1" }

[features]
small = []
