[package]
name = "rej"
version = "0.9.0"
edition = "2021"
description = "Minimalistic database"
license = "MIT"

[[bench]]
name = "main"
harness = false

[dev-dependencies]
env_logger = { version = "0.11.5" }
tempdir = { version = "0.3.7" }
rand = { version = "0.8.5" }
criterion = { version = "0.5.1" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.168" }

[dependencies]
fs4 = { version = "0.12.0" }
memmap2 = { version = "0.9.5" }
thiserror = { version = "2.0" }
crc64 = { version = "2.0" }
log = { version = "0.4.22" }
hex = { version = "0.4.3" }

# cipher
adiantum = { version = "0.1.1", optional = true }
chacha20 = { version = "0.9.1", optional = true }
aes = { version = "0.8.4", optional = true }
sha3 = { version = "0.10.8", optional = true }
hkdf = { version = "0.12.4", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
argon2 = { version = "0.5.3", optional = true }

[features]
small = []
cipher = [
    "adiantum",
    "chacha20",
    "aes",
    "sha3",
    "hkdf",
    "chacha20poly1305",
    "argon2",
]
